# private-targeting

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
src/private_targeting/: __init__.py  dp_cate.py
tests/: test_api.py
